level3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: nginx-ns2
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      # imagePullSecrets:
      #   - name: docker-hub
      containers:
      - name: nginx
        # image: akapolnn/nginx:test-alpine
        image: nginx/alpine
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: /usr/share/nginx/html/index.html
            name: html-index
            subPath: index.html
      volumes:
        - name: html-index
          configMap:
            name: html-index
