level3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-web2
  namespace: nginx-ns2
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
