level3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress2
  namespace: nginx-ns2
  labels:
    name: nginx-ingress2
spec:
  rules:
  - host: nginx.localhost.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-web2
            port: 
              number: 80
